# doggo_canvas

./: .env.example
api/: Cargo.toml
api/src/: error.rs  main.rs
api/src/handlers/: mod.rs
api/src/models/: canvas_message.rs  cursor.rs  mod.rs  room.rs  user.rs
api/src/models/updates/: client_event.rs  mod.rs  server_event.rs  username_update.rs
api/src/routes/: get_public_rooms.rs  get_room_state.rs  mod.rs  websocket_route.rs
models/: Cargo.toml
models/bindings/: CanvasState.ts  ClientEvent.ts  Coordinate.ts  Line.ts  PencilColor.ts  PencilThickness.ts  Room.ts  User.ts  UserLine.ts
models/src/: client_event.rs  lib.rs  room.rs  user.rs
models/src/canvas/: canvas_state.rs  coordinate.rs  line.rs  mod.rs  pencil_color.rs  pencil_thickness.rs  user_line.rs
web/: package.json
web/src/: App.vue  main.ts  style.css
web/src/api/: room_api.ts
web/src/components/: Board.vue  Home.vue
