[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.30"
lazy_static = "1.5.0"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
static_dir = "0.2.0"
tokio = { version = "1.39.1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
warp = "0.3.7"

models = { path = "../models" }
